--- a/Dictionary.ipynb
+++ b/Dictionary.ipynb
@@ -34,7 +34,8 @@
     "a\n",
     "\n",
     "a[\"new_key\"] = 'new_value'\n",
-    "a"
+    "a\n",
+    "\n"
    ]
   },
   {
@@ -146,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "id": "7fac4b19",
    "metadata": {},
    "outputs": [
@@ -154,10 +155,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5\n",
-      "{1: 1, 2: 8, 3: 27, 4: 64, 5: 125}\n",
-      "dict_keys([1, 2, 3, 4, 5])\n",
-      "dict_values([1, 8, 27, 64, 125])\n"
+      "4\n",
+      "{1: 1, 2: 8, 3: 27, 4: 64}\n",
+      "dict_keys([1, 2, 3, 4])\n",
+      "dict_values([1, 8, 27, 64])\n"
      ]
     }
    ],
@@ -167,7 +168,7 @@
     "d = { i:i**3 for i in range(1,int(input())+1) }\n",
     "print(d)\n",
     "print(d.keys())\n",
-    "print(d.values())"
+    "print(d.values())\n"
    ]
   },
   {
@@ -227,11 +228,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "818a489e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "27"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d1 = {i:i**3 for i in range(1,5)}\n",
+    "l1 = list(d1.values())\n",
+    "l1[2]\n"
+   ]
   }
  ],
  "metadata": {
@@ -251,6 +267,35 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.11.3"
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
