--- a/Decision_Trees_10_Feb_2024.ipynb
+++ b/Decision_Trees_10_Feb_2024.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPHhXSr6XrnRNJWJ22CV5Yj",
+      "authorship_tag": "ABX9TyPpdUOvibPXYwsHqhqm6R98",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "7hdzCD9sQUzR"
       },
@@ -53,7 +53,7 @@
       "metadata": {
         "id": "4gjErWl6RJ-u"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -71,7 +71,7 @@
         "id": "sH2UaKHiSIE_",
         "outputId": "17f97559-0521-428f-b221-e7b799ddda81"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -96,7 +96,7 @@
         "id": "JxfLGK6-SIGh",
         "outputId": "6373d58c-ef99-469c-acf7-0f49ce4bbef5"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -124,7 +124,7 @@
         "id": "96f9XXV2SIJF",
         "outputId": "fb8c4c67-ee5a-4b75-d315-97ced290e1af"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -169,7 +169,7 @@
         "id": "rZk8eo-QSIK8",
         "outputId": "7dd45695-0d20-4c9f-d56a-4d218860b258"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -198,7 +198,7 @@
         "id": "FfFpJzkTSIOe",
         "outputId": "0ecbd18c-4d79-4cc6-b1a5-6c6f93b46e27"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -214,12 +214,46 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "## Open and read data file as specified in the question\n",
+        "## Print the required output in given format\n",
+        "\n",
+        "from sklearn.tree import DecisionTreeClassifier\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn import datasets\n",
+        "from sklearn.metrics import confusion_matrix\n",
+        "\n",
+        "iris = datasets.load_iris()\n",
+        "\n",
+        "#print(1)\n",
+        "\n",
+        "xtrain, xtest , ytrain, ytest = train_test_split(iris.data, iris.target, random_state= 42)\n",
+        "\n",
+        "clsfr = DecisionTreeClassifier()\n",
+        "clsfr.fit(xtrain, ytrain)\n",
+        "ytestpred = clsfr.predict(xtest)\n",
+        "\n",
+        "print(confusion_matrix(ytest, ytestpred))"
+      ],
       "metadata": {
-        "id": "3e0LGwokRpmt"
+        "id": "3e0LGwokRpmt",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "238ff093-cabe-40e8-8a13-027654857d6d"
       },
-      "execution_count": 10,
-      "outputs": []
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[15  0  0]\n",
+            " [ 0 11  0]\n",
+            " [ 0  0 12]]\n"
+          ]
+        }
+      ]
     }
   ]
 }
